--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -103,17 +103,24 @@
           <!--/stories-->
           <div class="row">    
             <br>
-            <div class="col-md-2 col-sm-3 text-center">
+            <div class="col-md-6">
               Sign In
+              <form name="signInForm"
+                    action="/auth/signIn"
+                    method="post">
+                User Name: <input name="userName" id="userName"><br>
+                Password: <input type="password" name="password" id="password"><br>
+                <input type="submit" value="Sign In">
+              </form>
             </div>
-            <div class="col-md-10 col-sm-9">
+            <div class="col-md-6">
               Sign Up
               <form name="signUpForm"
                     action="/auth/signUp"
                     method="post">
-                <input name="userName" id="userName">
-                <input name="password" id="password">
-                <input type="submit" value="Sign up">
+                User Name: <input name="userName" id="userName"><br>
+                Password: <input type="password" name="password" id="password"><br>
+                <input type="submit" value="Sign Up">
               </form>
             </div>
           </div>
